<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".ui.auth.LandingActivity">

        <TextView
            android:layout_marginEnd="@dimen/margin"
            android:paddingBottom="@dimen/padding_x_small"
            android:paddingTop="@dimen/padding_x_small"
            android:paddingEnd="@dimen/padding"
            android:paddingStart="@dimen/padding"
            android:background="@drawable/round_corner_white_bg"
            android:layout_marginTop="@dimen/margin_x_large"
            android:id="@+id/langLabel"
            style="@style/CustomSmallDarkTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/en"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toTopOf="parent"></TextView>

        <ImageView
            android:layout_marginTop="@dimen/margin_large"
            android:id="@+id/jibliLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/jibli_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/langLabel"></ImageView>

        <TextView
            android:layout_marginTop="@dimen/margin_small"
            android:id="@+id/deliveryAppLabel"
            app:layout_constraintTop_toBottomOf="@+id/jibliLogo"
            style="@style/CustomRegularLightTextView"
            android:text="@string/delivery_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>

        <ImageView
            android:id="@+id/scoterLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_scoter_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/loginBt"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/deliveryAppLabel"></ImageView>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="@dimen/margin_x_large"
            android:id="@+id/loginBt"
            style="@style/CustomSecondaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/scoterLogo"
            app:layout_constraintBottom_toBottomOf="parent"></androidx.appcompat.widget.AppCompatButton>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>