<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.ssas.jibli.agent.repo.auth.AuthVM" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/forgetPassToolbar"
            layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/authLogoImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_x_large"
                    android:src="@drawable/ic_account_lock"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/instructionsLabel"
                    style="@style/CustomSmallTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginEnd="@dimen/margin"
                    android:gravity="center"
                    android:text="@string/forget_password_instructions"
                    app:layout_constraintBottom_toTopOf="@+id/llPhoneLabel"
                    app:layout_constraintTop_toBottomOf="@+id/authLogoImg"
                    app:layout_constraintVertical_chainStyle="packed"></TextView>

                <LinearLayout
                    android:id="@+id/llPhoneLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginTop="@dimen/margin_large"
                    android:layout_marginEnd="@dimen/margin"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@+id/footer"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/instructionsLabel"
                    app:layout_constraintVertical_chainStyle="packed">

                    <EditText
                        android:id="@+id/phoneNumberCodeEt"
                        style="@style/CustomEditRegularStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin"
                        android:background="@drawable/et_bg"
                        android:cursorVisible="false"
                        android:drawableEnd="@drawable/ic_arrow_down_24"
                        android:focusable="false"
                        android:hint="@string/code"
                        android:inputType="none"
                        android:longClickable="false"
                        android:maxLines="1"
                        android:onClick="@{()->vm.countryCodeClick()}"
                        android:text="@{vm.countryCode}"
                        app:layout_constraintEnd_toStartOf="@+id/phoneNumberEt"
                        app:layout_constraintTop_toBottomOf="@+id/optionLabel"
                        app:layout_constraintVertical_chainStyle="packed" />


                    <EditText
                        android:id="@+id/phoneNumberEt"
                        style="@style/CustomEditRegularStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:inputType="number"
                        android:maxLines="1"
                        android:text="@={vm.phoneNumber}" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/footer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/drawable_top_rounded_corner"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/margin"
                    android:paddingTop="@dimen/margin_large"
                    android:paddingEnd="@dimen/margin"
                    android:paddingBottom="@dimen/margin_large"
                    app:layout_constraintBottom_toBottomOf="parent">


                    <Button
                        android:id="@+id/saveBt"
                        style="@style/CustomPrimaryButton"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="@dimen/margin_large"
                        android:onClick="@{()->vm.retrievePasswordRequest()}"
                        android:text="@string/send"
                        android:textColor="@color/colorWhite"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/margin_large"
                        android:onClick="@{()->vm.cancelClick()}"
                        android:paddingStart="@dimen/padding"
                        android:paddingTop="@dimen/padding_small"
                        android:paddingEnd="@dimen/padding"
                        android:text="@string/cancel"
                        android:textAlignment="center"
                        android:textColor="@color/colorBlack"
                        app:layout_constraintTop_toBottomOf="@+id/saveBt" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>
</layout>